# space-workshop

./: .ghci  .gitignore  .gitmodules  .travis.yml  ChangeLog.md  README.md  cabal.project  cabal.project.freeze  index.html  lj-submission.md  package.yaml  run-ghcid.sh  shell.nix  space-workshop.cabal  stack.yaml
app/clearcoat-test/: Main.hs
app/dpendulum/: Main.hs
app/drag-plots/: Main.hs
app/lunar-ascent/: Main.hs
app/mcdrag-validation/: Main.hs
app/ode-examples/: Main.hs
app/tex-plots/: Main.hs
css/: style.css
gh-pages/: index.html
gh-pages/css/: style.css
misc/mcdrag-simplification-maxima/: Makefile  latexmkrc  maxiplot.sty  mcdrag-formulas.tex  mcdrag.mac  mcdrag.tex
notes/: Makefile  intro-slides.tex  notes.md  notes.tex  preamble.tex  references.bib
notes/beamer-trek/: beamercolorthemetrek.sty  beamerfontthemetrek.sty  beamerinnerthemetrek.sty  beamerouterthemetrek.sty  beamerthemetrek.sty  trek-shapes.sty
notes/fig/: hohmann-ultra-low-impulse.tex
src/: CubicSpline.hs  DoublePendulum.hs  Drag.hs  Hohmann.hs  LunarAscent.hs  LunarAscent2.hs  McDrag.hs  ODE.hs  Orphans.hs  PSO.hs  Plot.hs  Staging.hs  Todo.hs  Tridiagonal.hs  Units.hs  Viridis.hs
src/ClearCoat/: Escher.hs  Jelly.hs  Test.hs  Test2.hs  Types.hs
src/Examples/: ODEExamples.hs
src/Hohmann/: Types.hs
src/LunarAscent/: AGC.hs  Animation.hs  Types.hs
src/LunarAscent2/: AGC.hs  Types.hs
src/ODE/: Examples.hs  FixedStep.hs  FixedStepV.hs
src/Solutions/: Hohmann.hs  ODE.hs  Staging.hs
src/Staging/: Types.hs
test/: Test.hs  TestTridiagonal.hs
